# fxt-cpp

./: CMakeLists.txt
.github/workflows/: test.yaml
include/fxt/: record_args.h
src/: CMakeLists.txt  fields.h  record_args.h  writer.cpp
tests/src/: CMakeLists.txt  write.cpp  writer_validation.h
